Create logout function

--- a/static/bulletin-board.html
+++ b/static/bulletin-board.html
@@ -3,6 +3,7 @@
   </head>
   <body>
     <h1>Bulletin board</h1>
+    <a href="/logout">logout</a>
 
     <div id="message-create-form">
       text: <input name="text" type="text" />
