--- a/static/bulletin-board.html
+++ b/static/bulletin-board.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <title>Bulletin board</title>
+    <script src="jquery.min.js"></script>
   </head>
   <body>
     <h1>Bulletin board</h1>
