--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Bulletin board</h1>
-    <a href="/auth/twitter?provider=twitter">Sign up / in with Twitter</a>
+    <a href="/auth?provider=twitter">Sign up / in with Twitter</a>
   </body>
 </html>
