--- a/static/bulletin-board.html
+++ b/static/bulletin-board.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Bulletin board</title>
-    <script src="jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>Bulletin board</h1>
