--- a/static/index.html
+++ b/static/index.html
@@ -17,12 +17,11 @@ $(() => {
       const w = 500;
       const h = 500;
       const width = window.screen.width;
-      const height = window.screen.height;
       window.open(
         event.target.href,
         '_blank',
         `
-          top=${(height - h)/2},
+          top=80,
           left=${(width - w)/2},
           width=${w},
           height=${h},
